# sglang-itl

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
configs/: minimax_m27_nvfp4_tokentiming_universal.json  minimax_m27_nvfp4_vllm_peagle.json
docs/: heterogeneous_vocab_universal_draft.md  minimax_m27_nvfp4_production.md  sglang_token_itl.md  tokentiming.md
examples/: tokentiming_hf_demo.py
scripts/: minimax_m27_nvfp4_deploy.py  sglang_token_itl_preflight.py  tokentiming_pair_bench.py
tests/: test_tokentiming_alignment.py  test_tokentiming_core.py  test_tokentiming_deployment.py  test_tokentiming_sglang.py
tokentiming/: __init__.py  config.py  deployment.py  hf_decoder.py
tokentiming/cli/: __init__.py  minimax_m27_nvfp4_deploy.py  openai_compat_bench.py  sglang_token_itl_launch.py  sglang_token_itl_preflight.py  tokentiming_pair_bench.py
tokentiming/sglang/: __init__.py  candidates.py  compat.py  config.py  plugin.py  proposer.py  validation.py  worker.py
