[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-itl"
version = "0.1.0"
description = "Heterogeneous-vocabulary speculative decoding toolkit with TokenTiming-style alignment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Huifu1018"}
]
dependencies = []

[project.optional-dependencies]
hf = [
  "torch",
  "transformers>=4.40",
  "accelerate",
  "sentencepiece>=0.2",
  "safetensors>=0.4"
]
sglang = [
  "sglang>=0.5.11",
  "torch",
  "transformers>=4.40",
  "accelerate",
  "sentencepiece>=0.2",
  "safetensors>=0.4"
]

[project.entry-points."sglang.srt.plugins"]
token_itl = "tokentiming.sglang.plugin:activate"

[tool.setuptools]
packages = ["tokentiming", "tokentiming.sglang"]
