[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-itl"
version = "0.1.0"
description = "Heterogeneous-vocabulary speculative decoding toolkit with TokenTiming-style alignment"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Huifu1018"}
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Huifu1018/sglang-itl"
Repository = "https://github.com/Huifu1018/sglang-itl"
Issues = "https://github.com/Huifu1018/sglang-itl/issues"

[project.optional-dependencies]
hf = [
  "torch",
  "transformers>=4.40",
  "accelerate",
  "sentencepiece>=0.2",
  "safetensors>=0.4"
]
sglang = [
  "sglang>=0.5.9,<0.6",
  "torch",
  "transformers>=4.40",
  "accelerate",
  "sentencepiece>=0.2",
  "safetensors>=0.4"
]

[project.entry-points."sglang.srt.plugins"]
token_itl = "tokentiming.sglang.plugin:activate"

[project.scripts]
sglang-itl-bench = "tokentiming.cli.openai_compat_bench:main"
sglang-itl-minimax-m27 = "tokentiming.cli.minimax_m27_nvfp4_deploy:main"
sglang-itl-pair-bench = "tokentiming.cli.tokentiming_pair_bench:main"
sglang-itl-preflight = "tokentiming.cli.sglang_token_itl_preflight:main"
sglang-itl-launch = "tokentiming.cli.sglang_token_itl_launch:main"

[tool.setuptools.packages.find]
include = ["tokentiming*"]
